src/style/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
/*
.desktop1149-desktop1149 {
    width: 2000px;
    height: 5426px;
    display: flex;
    overflow: hidden;
    position: relative;
    max-width: 2000px;
    box-sizing: border-box;
    align-items: flex-start;
    border-color: transparent;
    background-color: rgba(255, 255, 255, 1);
}
*/
.hero {
    top: 68px;
    width: 100%;
    height: 80%;
    display: flex;
    overflow: hidden;
    position: absolute;
    box-sizing: border-box;
    align-items: center;
    justify-content: center;
    border-color: transparent;
    background-image: url("../assets/shop-homepage.jpg");
}

.desktop-image {
    top: 0px;
    /* left: 0px; */
    width: 100%;
    height: 100%;
    position: absolute;
    box-sizing: border-box;
    object-fit: cover;
    border-color: transparent;
    background-color: rgba(0, 0, 0, 0.5);
}

.landing-banner {
    /* top: 159px; */
    /* left: 209px; */
    width: 70%;
    height: 50%;
    display: flex;
    position: absolute;
    box-shadow: 1px 2px 3px rgba(0, 0, 0, .5);
    -webkit-box-shadow: 1px 2px 3px rgba(0, 0, 0, .5);
    background: rgba(0, 0, 0, 0.3);
    box-sizing: border-box;
    justify-content: center;
    align-items: center;
    /* flex-shrink: 1; */
    border-color: transparent;
}

.banner-text2 {
    /* top: 143px; */
    /* left: 0px; */
    color: rgba(255, 255, 255, 1);
    width: inherit;
    height: auto;
    position: absolute;
    font-size: 70px;
    align-self: center;
    border-bottom: ridge;
    margin-bottom: 0;
    font-style: normal;
    text-align: center;
    font-family: Poppins;
    font-weight: 400px;
    /* line-height: 160px; */
    /* font-stretch: normal; */
    text-decoration: none;
}

.banner-text1 {
    /* top: 0px; */
    /* left: 78px; */
    color: rgba(255, 255, 255, 1);
    width: inherit;
    height: auto;
    position: absolute;
    font-size: 45px;
    align-self: center;
    /* font-style: normal; */
    text-align: center;
    top: 20%;
    font-family: Oleo Script Swash Caps;
    font-weight: 400px;
    /* line-height: normal; */
    /* font-stretch: normal; */
    text-decoration: none;
}

.banner-button {
    top: 342px;
    /* left: 399px; */
    /* width: 202px; */
    height: 45px;
    display: flex;
    padding: 0 38px;
    overflow: hidden;
    position: absolute;
    box-sizing: border-box;
    align-items: center;
    justify-content: center;
    border-color: transparent;
    border-radius: 1000px;
    background-color: darkred;
}

.banner-btn-text {
    color: rgba(255, 255, 255, 1);
    height: auto;
    align-self: auto;
    text-align: center;
    /* line-height: 160px; */
    text-decoration: none;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 18px;
}

.navbar {
    width: 100%;
    height: 60px;
    display: flex;
    overflow: hidden;
    position: absolute;
    box-sizing: border-box;
    align-items: center;
    border-color: rgba(20, 19, 19, 1);
    background-color: rgba(20, 19, 19, 1);
}

.logo {
    color: rgba(255, 255, 255, 1);
    width: fit-content;
    /*position: absolute;*/
    font-size: 38px;
    align-self: center;
    font-style: normal;
    text-align: center;
    font-family: Oleo Script Swash Caps;
    /*font-weight: 400px;
    line-height: 160px;
    font-stretch: normal;*/
    text-decoration: none;
    margin-left: 10%;
}

.options {
    width: fit-content;
    display: inline-flex;
    box-sizing: border-box;
    align-items: center;
    border-color: transparent;
    height: inherit;
    margin-right: 10%;
    margin-left: auto;
    position: relative;
}

.option-1 {
    color: rgba(255, 255, 255, 1);
    width: fit-content;
    height: auto;
    /* margin: 0 20px 0 0; */
    font-size: 18px;
    align-self: auto;
    font-style: normal;
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 400px;
    /* line-height: 160px; */
    font-stretch: normal;
    text-decoration: none;
    padding-right: 20px;
}

.option-2 {
    color: rgba(255, 255, 255, 1);
    width: fit-content;
    height: auto;
    /* margin: 0 20px 0 0; */
    font-size: 18px;
    align-self: auto;
    font-style: normal;
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 400px;
    /* line-height: 160px; */
    font-stretch: normal;
    text-decoration: none;
    padding-right: 20px;
}

.option-3 {
    color: rgba(255, 255, 255, 1);
    width: fit-content;
    height: auto;
    /* margin: 0 20px 0 0; */
    font-size: 18px;
    align-self: auto;
    font-style: normal;
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 400px;
    /* line-height: 160px; */
    font-stretch: normal;
    text-decoration: none;
    padding-right: 20px;
}

.option-4 {
    color: rgba(255, 255, 255, 1);
    width: fit-content;
    height: auto;
    /* margin: 0 20px 0 0; */
    font-size: 18px;
    align-self: auto;
    font-style: normal;
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 400px;
    /* line-height: 160px; */
    font-stretch: normal;
    text-decoration: none;
    padding-right: 20px;
}

.option-5 {
    color: rgba(255, 255, 255, 1);
    width: fit-content;
    height: auto;
    /* margin: 0 20px 0 0; */
    font-size: 18px;
    align-self: auto;
    font-style: normal;
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 400px;
    /* line-height: 160px; */
    font-stretch: normal;
    text-decoration: none;
    padding-right: 20px;
}
/* ... */

